fixed list spacing

--- a/templates/blog/blog.css
+++ b/templates/blog/blog.css
@@ -22,6 +22,11 @@
 }
 
 .blog main ul ul,
+.blog main ol ol{
+  margin-top: 4px;
+}
+
+.blog main ul ul,
 .blog main ol ol,
 .blog main .section .default-content-wrapper > p:last-child {
   margin-bottom: 0;
